--- a/assets/scss/layout/header/_header.scss
+++ b/assets/scss/layout/header/_header.scss
@@ -180,4 +180,25 @@
       place-items: center;
     }
   }
+  &-mega-menu{
+    width :950px;;
+    background-color: var(--pf-primary-color);
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 30px;
+    padding: 30px 40px;
+    justify-content: space-around;
+    &-item{
+      border: 1px solid var(--pf-secondary-color);
+      border-radius: 5px;
+    }
+    &-thumb{
+      padding: 20px;
+      & img {
+        max-width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
+    }
+  }
 }
