--- a/assets/scss/utils/_colors.scss
+++ b/assets/scss/utils/_colors.scss
@@ -5,6 +5,7 @@
     --pf-paragraph-color: #646464;
     --pf-common-black: #000;
     --pf-common-white: #fff;
+    --pf-bg-color: #FCFFE7;
 
     --pf-offcanvas-bg-color: #0E0A24;
     --pf-theme-nblue: #001C52;
