--- a/assets/scss/component/_section_title.scss
+++ b/assets/scss/component/_section_title.scss
@@ -1,31 +1,16 @@
 @use "../utils" as *;
 
-.rt__section-title {
-  & h6 {
-    font-weight: 600;
-    font-size: 14px;
-    text-transform: uppercase;
-	margin: 0;
-	padding-right: 14px;
+.pf__section-title {
+  & p {
+    font-family: var(--pf-primary-font);
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 125%;
+    color: var(--pf-secondary-color);
   }
   & h1 {
-    & span {
-      color: #16171a;
-    }
-    @media #{$md} {
-      font-size: 40px;
-    }
-    @media #{$sm,$xs} {
-      font-size: 30px;
-    }
-    &  br {
-      @media #{$sm,$xs} {
-        display: none;
-      }
-    }
-  }
-  & p {
-	margin-top: 20px;
-	margin-bottom: 20px;
+    line-height: 66px;
+    text-transform: capitalize;
+    color: var(--pf-primary-color);
   }
 }
