--- a/assets/scss/theme/_theme.scss
+++ b/assets/scss/theme/_theme.scss
@@ -196,7 +196,7 @@ li {
 p {
   font-size: 16px;
   font-weight: 400;
-  color: var(--rt-paragraph-color);
+  color: var(--pf-paragraph-color);
   line-height: 1.8;
   margin-bottom: 0;
 }
