--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10177,6 +10177,11 @@ textarea {
   }
 }
 
+.pf__text-brand-wrapper h6 {
+  font-weight: 500;
+  color: var(--pf-primary-color);
+}
+
 .demo h1 {
   font-size: 100px;
   text-transform: uppercase;
