--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ h6 {
   color: var(--pf-primary-color);
   margin-top: 0px;
   font-weight: 700;
-  line-height: 1.2;
+  line-height: 1.4;
 }
 
 h1 {
@@ -405,24 +405,8 @@ textarea {
   width: 100%;
 }
 
-.margin-lf-rt {
-  margin-left: 60px;
-  margin-right: 60px;
-  border-radius: 50px;
-  overflow: hidden;
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px) {
-  .margin-lf-rt {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-}
-@media (max-width: 576px) {
-  .margin-lf-rt {
-    margin-left: 14px;
-    margin-right: 14px;
-    border-radius: 20px;
-  }
+.section-space-mb {
+  margin-bottom: 120px;
 }
 
 .section-space-margin {
@@ -504,11 +488,11 @@ textarea {
 }
 
 .text-primary-color {
-  color: var(--rt-primary-color);
+  color: var(--pf-primary-color);
 }
 
 .text-secondary-color {
-  color: var(--rt-secondary-color);
+  color: var(--pf-secondary-color);
 }
 
 .bg-primary-color {
@@ -548,6 +532,18 @@ textarea {
 .hero-custom-padding {
   padding-top: 205px;
   padding-bottom: 250px;
+}
+
+.bg-discount-card-1 {
+  background-color: #F5F0EA;
+}
+
+.bg-discount-card-2 {
+  background-color: #F6F7F9;
+}
+
+.bg-discount-card-3 {
+  background-color: #F2F1EC;
 }
 
 /*--
@@ -9152,103 +9148,39 @@ textarea {
   padding-left: 16px;
 }
 
-.rt__discount-wrapper {
-  padding-top: 120px;
-  padding-bottom: 330px;
+.pf__discount-card {
+  overflow: hidden;
+  padding: 34px;
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .rt__discount-wrapper {
-    padding-bottom: 300px;
-  }
+.pf__discount-card p {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 156%;
+  color: var(--pf-secondary-color);
+  margin-bottom: 5px;
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .rt__discount-wrapper {
-    padding-top: 80px;
-    padding-bottom: 280px;
-  }
+.pf__discount-card span img {
+  transform: rotate(-20deg);
+  margin-right: 0px;
+  margin-top: 30px;
 }
-@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 576px) {
-  .rt__discount-wrapper {
-    padding-top: 40px;
-    padding-bottom: 280px;
-  }
+.pf__discount-card:hover .pf__discount-shape-2 {
+  top: 0;
+  right: 0;
+  opacity: 1;
 }
-.rt__discount-icon {
-  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
-  background: #fff;
-  padding: 40px;
+.pf__discount-shape-1 {
+  top: 0;
+  right: 0;
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .rt__discount-icon {
-    padding: 22px;
-  }
-}
-.rt__discount-icon h4 a {
-  transition: all 0.3s ease-in-out 0s;
-}
-.rt__discount-icon h4 a:hover {
-  color: var(--rt-secondary-color);
-}
-.rt__discount-icon:hover span {
-  border: 1px solid var(--rt-secondary-color);
-}
-.rt__discount-icon:hover span img {
-  animation: hoverimg1 0.3s ease-in-out;
-}
-.rt__discount-icon span {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  display: grid;
-  place-items: center;
-  border: 1px solid rgba(109, 109, 109, 0.3);
-  transition: all 0.3s ease-in-out 0s;
-}
-.rt__discount-icon button {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 214%;
-  padding: 10px;
-  color: #034833;
-  transition: all 0.3s ease-in-out 0s;
-}
-.rt__discount-icon button:hover {
-  color: var(--rt-secondary-color);
-}
-.rt__discount-icon button:hover i {
-  margin-left: 8px;
-}
-.rt__discount-icon button i {
-  margin-left: 5px;
+.pf__discount-shape-2 {
+  top: -20px;
+  right: 0;
+  opacity: 0;
   transition: all 0.3s ease-in-out 0s;
 }
 
-@keyframes hoverimg1 {
-  0% {
-    margin-left: -8px;
-    margin-top: -8px;
-  }
-  20% {
-    margin-left: 0px;
-    margin-top: 0px;
-  }
-  40% {
-    margin-left: -8px;
-    margin-top: -8px;
-  }
-  60% {
-    margin-left: 0px;
-    margin-top: 0px;
-  }
-  80% {
-    margin-left: -8px;
-    margin-top: -8px;
-  }
-  100% {
-    margin-left: 0px;
-    margin-top: 0px;
-  }
-}
 .rt__contact-area {
   margin-top: -210px;
 }
