--- a/assets/scss/layout/pages/_discount.scss
+++ b/assets/scss/layout/pages/_discount.scss
@@ -1,100 +1,40 @@
 @use "../../utils" as *;
 
-.rt__discount {
-  &-wrapper {
-    padding-top: 120px;
-    padding-bottom: 330px;
-    @media #{$lg} {
-      padding-bottom: 300px;
-    }
-    @media #{$md} {
-      padding-top: 80px;
-      padding-bottom: 280px;
-    }
-    @media #{$sm,$xs} {
-      padding-top: 40px;
-      padding-bottom: 280px;
-    }
-  }
-  &-icon {
-    box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
-    background: #fff;
-    padding: 40px;
-    @media #{$md} {
-      padding: 22px;
-    }
-    & h4 {
-      & a {
-        @include d-transition;
-        &:hover{
-          color: var(--rt-secondary-color);
-        }
-      }
-    }
-    &:hover{
-      & span {
-        border: 1px solid var(--rt-secondary-color);
-        & img {
-          animation: hoverimg1 .3s ease-in-out;
-        }
-      }
+.pf__discount {
+  &-card {
+    overflow: hidden;
+    padding: 34px;
+    & p {
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 156%;
+      color: var(--pf-secondary-color);
+      margin-bottom: 5px;
     }
     & span {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      display: grid;
-      place-items: center;
-      border: 1px solid rgba(109, 109, 109, 0.3);
-      @include d-transition;
-     
-    }
-    & button {
-      font-weight: 600;
-      font-size: 14px;
-      line-height: 214%;
-      padding: 10px ;
-      color: #034833;
-      @include d-transition;
-      &:hover{
-        color: var(--rt-secondary-color);
-        & i {
-          margin-left: 8px;
-        }
+      & img {
+        transform: rotate(-20deg);
+        margin-right: 0px;
+        margin-top: 30px;
       }
-      & i {
-        margin-left: 5px;
-        @include d-transition ;
+    }
+    &:hover {
+      & .pf__discount-shape-2 {
+        top: 0;
+        right: 0;
+        opacity: 1;
       }
     }
   }
-}
-
-
-
-@keyframes hoverimg1 {
-  0% {
-    margin-left: -8px;
-    margin-top: -8px;
+  &-shape-1 {
+    top: 0;
+    right: 0;
   }
-  20% {
-    margin-left: 0px;
-    margin-top: 0px;
-  }
-  40% {
-    margin-left: -8px;
-    margin-top: -8px;
-  }
-  60% {
-    margin-left: 0px;
-    margin-top: 0px;
-  }
-  80% {
-    margin-left: -8px;
-    margin-top: -8px;
-  }
-  100% {
-    margin-left: 0px;
-    margin-top: 0px;
+  &-shape-2 {
+    top: -20px;
+    right: 0;
+    opacity: 0;
+    @include d-transition;
   }
 }
