--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@
   font-size: 24px;
   line-height: 125%;
   color: var(--pf-secondary-color);
+  margin-bottom: 10px;
 }
 .pf__section-title h1 {
   line-height: 66px;
@@ -420,21 +421,9 @@ textarea {
   }
 }
 
-.section-space-padding {
+.section-padding-py {
   padding-top: 120px;
   padding-bottom: 120px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .section-space-padding {
-    padding-top: 80px;
-    padding-bottom: 80px;
-  }
-}
-@media only screen and (min-width: 576px) and (max-width: 767px), (max-width: 576px) {
-  .section-space-padding {
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
 }
 
 .fix {
@@ -544,6 +533,10 @@ textarea {
 
 .bg-discount-card-3 {
   background-color: #F2F1EC;
+}
+
+.bg-product-color {
+  background-color: #FAFAFA;
 }
 
 /*--
@@ -10112,6 +10105,131 @@ textarea {
 .pf__text-brand-wrapper h6 {
   font-weight: 500;
   color: var(--pf-primary-color);
+}
+
+.pf__product-tabs-btn .active {
+  color: var(--pf-secondary-color);
+  text-decoration: underline;
+}
+.pf__product-tabs-btn button {
+  padding: 0 20px;
+  font-weight: 500;
+}
+.pf__product-card-wrapper {
+  padding: 10px;
+  background-color: transparent;
+  transition: all 0.3s ease-in-out 0s;
+}
+.pf__product-card-wrapper:hover {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 20px 40px rgba(0, 29, 8, 0.1);
+}
+.pf__product-card-wrapper:hover .pf__product-card-img img {
+  transform: scale(1.13);
+}
+.pf__product-card-wrapper:hover .card-hover-item-2 {
+  opacity: 1;
+  left: 8px;
+}
+.pf__product-card-wrapper:hover .card-hover-item-1 {
+  opacity: 1;
+  bottom: 0px;
+}
+.pf__product-card-wrapper:hover .pf__product-img-icon {
+  top: 8px;
+  opacity: 1;
+}
+.pf__product-card-img {
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+}
+.pf__product-card-img img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: contain;
+  transition: all 0.3s ease-in-out 0s;
+}
+.pf__product-card-img span:nth-child(1) {
+  background-color: var(--pf-common-black);
+  font-family: var(--pf-accent-font);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #fff;
+  padding: 2px;
+  border-radius: 3px;
+  position: absolute;
+  top: 10px;
+  left: 8px;
+  z-index: 9;
+}
+.pf__product-card-img span:nth-child(2) {
+  background-color: var(--pf-secondary-color);
+  font-family: var(--pf-accent-font);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: #fff;
+  padding: 2px 8px;
+  border-radius: 3px;
+  position: absolute;
+  top: 40px;
+  left: 0px;
+  z-index: 9;
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+}
+.pf__product-card-text {
+  overflow: hidden;
+}
+.pf__product-card-text h5 {
+  transition: all 0.3s ease-in-out 0s;
+}
+.pf__product-card-text h5:hover {
+  color: var(--pf-secondary-color);
+}
+.pf__product-card-text p span:nth-child(1) {
+  font-family: var(--pf-accent-font);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  text-decoration: line-through;
+  color: #f00;
+}
+.pf__product-card-text button {
+  bottom: -30px;
+  left: 0;
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+}
+.pf__product-card-text button:hover {
+  background-color: var(--pf-secondary-color);
+}
+.pf__product-img-icon {
+  position: absolute;
+  top: 50px;
+  right: 8px;
+  z-index: 99;
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+}
+.pf__product-img-icon a {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  margin-bottom: 8px;
+  background-color: var(--pf-common-white);
+  transition: all 0.3s ease-in-out 0s;
+}
+.pf__product-img-icon a:hover {
+  background-color: var(--pf-secondary-color);
+}
+.pf__product-img-icon a:hover i {
+  color: white;
 }
 
 .demo h1 {
