--- a/assets/scss/component/_section_title.scss
+++ b/assets/scss/component/_section_title.scss
@@ -7,6 +7,7 @@
     font-size: 24px;
     line-height: 125%;
     color: var(--pf-secondary-color);
+    margin-bottom: 10px;
   }
   & h1 {
     line-height: 66px;
