--- a/assets/scss/theme/_common.scss
+++ b/assets/scss/theme/_common.scss
@@ -26,17 +26,9 @@
     margin-bottom: 80px;
   }
 }
-.section-space-padding {
+.section-padding-py {
   padding-top: 120px;
   padding-bottom: 120px;
-  @media #{$md} {
-    padding-top: 80px;
-  padding-bottom: 80px;
-  }
-  @media #{$sm,$xs} {
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
 }
 
 .fix {
@@ -130,4 +122,7 @@
 }
 .bg-discount-card-3{
   background-color: #F2F1EC;
+}
+.bg-product-color{
+  background-color: #FAFAFA;
 }
