--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10272,6 +10272,62 @@ textarea {
     transform: scale(1);
   }
 }
+.pf__bdeal-counter-wrapper p {
+  font-family: var(--pf-accent-font);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  color: #646464;
+  margin: 0;
+  padding: 0;
+}
+.pf__bdeal-counter-wrapper span {
+  font-family: var(--pf-accent-font);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  color: var(--pf-common-white);
+  margin: 0;
+  padding: 0;
+  background-color: var(--pf-secondary-color);
+  padding: 2px 10px;
+  display: inline-block;
+}
+.pf__bdeal-card-text {
+  padding-top: 10px;
+  padding-left: 10px;
+  position: relative;
+  z-index: 99;
+}
+.pf__bdeal-card-text h4 {
+  font-weight: 600;
+  line-height: 133%;
+  color: var(--pf-common-white);
+}
+.pf__bdeal-card-text p {
+  font-family: var(--pf-accent-font);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  color: #fff;
+  opacity: 0.8;
+}
+.pf__bdeal-card-img img {
+  margin-left: 20px;
+  margin-bottom: -20px;
+  margin-top: -50px;
+  z-index: -1;
+  animation: bdealimg 1s infinite alternate;
+}
+
+@keyframes bdealimg {
+  0% {
+    transform: translateY(0px);
+  }
+  0% {
+    transform: translateY(10px);
+  }
+}
 .demo h1 {
   font-size: 100px;
   text-transform: uppercase;
