--- a/assets/scss/theme/_common.scss
+++ b/assets/scss/theme/_common.scss
@@ -95,6 +95,9 @@
 .bg-hero-color {
   background-color: var(--pf-bg-color);
 }
+.bg-hero-color-50 {
+  background-color:#FDFFF2;
+}
 
 .tp-slide-transtion {
   -webkit-transition-timing-function: linear;
