--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9479,111 +9479,21 @@ textarea {
     margin-top: 0px;
   }
 }
-.rt__tes-slider {
-  margin-right: -100px;
-  border-radius: 20px;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px), (max-width: 576px) {
-  .rt__tes-slider {
-    margin-right: 0px;
-  }
-}
-.rt__tes-slide {
-  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
+.pf__tes-slider .swiper-slide {
+  box-shadow: rgba(0, 29, 8, 0.1) 0px 10px 15px;
   background: #fff;
-  position: relative;
 }
-@media only screen and (min-width: 1200px) and (max-width: 1399px), only screen and (min-width: 992px) and (max-width: 1199px) {
-  .rt__tes-slide {
-    padding: 40px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 576px) and (max-width: 767px) {
-  .rt__tes-slide {
-    padding: 20px;
-  }
-}
-@media (max-width: 576px) {
-  .rt__tes-slide {
-    padding: 10px;
-  }
-}
-.rt__tes-slide > p {
-  font-size: 30px;
-  color: var(--rt-primary-color);
-  padding-bottom: 44px;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .rt__tes-slide > p {
-    font-size: 27px;
-  }
-}
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-  .rt__tes-slide > p {
-    font-size: 22px;
-  }
-}
-@media (max-width: 576px) {
-  .rt__tes-slide > p {
-    font-size: 20px;
-  }
-}
-.rt__tes-icon {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-.rt__tes-icon span {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  display: block;
-  overflow: hidden;
-}
-.rt__tes-icon span img {
-  width: 100%;
-}
-.rt__tes-slider-btn {
-  bottom: 70px;
-  right: -40px;
+.pf__tes-next-btn {
+  font-size: 40px;
+  right: 0;
+  bottom: 40%;
   z-index: 99;
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .rt__tes-slider-btn {
-    bottom: 70px;
-    right: 0px;
-    z-index: 99;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .rt__tes-slider-btn {
-    bottom: 70px;
-    right: 20px;
-    z-index: 99;
-  }
-}
-@media only screen and (min-width: 576px) and (max-width: 767px) {
-  .rt__tes-slider-btn {
-    bottom: 30px;
-    right: 20px;
-    z-index: 99;
-  }
-}
-@media (max-width: 576px) {
-  .rt__tes-slider-btn {
-    visibility: hidden;
-  }
-}
-.rt__tes-img span {
-  width: 100%;
-  height: 100%;
-  display: block;
-  border-radius: 20px;
-  perspective: 1000px; /* Adds 3D perspective */
-}
-.rt__tes-img span img {
-  width: 100%;
-  display: block;
+.pf__tes-prev-btn {
+  font-size: 40px;
+  left: 0;
+  bottom: 40%;
+  z-index: 99;
 }
 
 .rt-branding-slider .swiper-wrapper {
