--- a/assets/scss/theme/_common.scss
+++ b/assets/scss/theme/_common.scss
@@ -17,6 +17,9 @@
 .section-space-mb{
   margin-bottom: 120px;
 }
+.section-space-pb{
+  padding-bottom: 120px;
+}
 
 .section-space-margin {
   margin-top: 120px;
