--- a/assets/scss/layout/pages/_blog.scss
+++ b/assets/scss/layout/pages/_blog.scss
@@ -1,137 +1,98 @@
 @use "../../utils" as *;
 
-.rt-blog {
-  &-card-wrapper {
-    box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
-    background: #fff;
-    border: 1px solid #fff;
-    @include d-transition;
-    &:hover {
-      border: 1px solid var(--rt-secondary-color);
-    }
-    & br {
-      @media #{$xl,$lg,$md,$xs} {
-        display: none;
-      }
-    }
-  }
-  &-card-text {
-    @media #{$lg,$xs} {
-      padding: 18px;
-    }
-  }
-  &-card-sm-text {
-    & p,
-    & i {
-      color: var(--rt-primary-color);
-      @media #{$lg} {
-        font-size: 14px;
+.pf__blog {
+  &-slider {
+    & .swiper-slide {
+      border: 1px solid #f0f0f0;
+      background-color: #fff;
+      @include d-transition;
+      &:hover {
+        box-shadow: 0 20px 40px 0 rgba(0, 29, 8, 0.1);
+        background-color: #fff;
+        & .blog-hover-img {
+          transform: scale(1.1);
+        }
       }
     }
   }
   &-card-img {
-    & span {
+    & img {
       width: 100%;
-      height: 100%;
       display: block;
-      border-radius: 20px;
-      // overflow: hidden;
-      perspective: 1000px; /* Adds 3D perspective */
-      & img {
-        border-radius: 20px;
-        max-width: 100%;
-        display: block;
-      }
+      @include d-transition;
     }
   }
-  &-next-btn,
-  &-prev-btn {
-    width: 60px;
-    height: 60px;
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
-    background: transparent;
-    border: 1px solid #fff;
-    @include d-transition;
-    &:hover{
-      background-color: var(--rt-secondary-color);
-      color: #fff;
-      border: none;
-      & i {
-        color: #fff;
-      }
-    }
-    & i {
-      color: var(--rt-primary-color);
-      font-size: 16px;
-    }
-  }
-  &-next-btn {
-    top: 13%;
-    right: 84px;
-    @media #{$xl} {
-      top: 12%;
-      right: 110px;
-    }
-    @media #{$lg} {
-      top: 13%;
-      right: 120px;
-    }
-    @media #{$xs} {
-      top: 17%;
-      right: 126px;
-    }
-  }
-  &-prev-btn {
-    top: 13%;
-    right: 0;
-    @media #{$xl} {
-      top: 12%;
-      right: 25px;
-    }
-    @media #{$lg} {
-      top: 13%;
-      right: 38px;
-    }
-    @media #{$xs} {
-      top: 17%;
-      right: 40px;
-    }
-  }
-  &-card-heading-text {
+  &-card-date {
+    margin-top: -40px;
+    background-color: red;
+    display: inline-block;
+    padding: 15px 20px;
+    z-index: 99;
     & h4 {
-      // font-size: 24px;
-      @media #{$lg,$md,$xs} {
-        font-size: 18px;
-      }
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 58%;
+      text-align: center;
+      color: #fff;
+      // margin: 0;
+      padding: 0;
     }
     & p {
-      @media #{$lg} {
-        font-size: 14px;
+      font-weight: 400;
+      font-size: 12px;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+  }
+  &-card-body {
+    & a {
+      @include d-transition;
+      &:hover{
+        color: var(--pf-secondary-color);
+      }
+    }
+    & h5 {
+      font-weight: 600;
+      font-size: 22px;
+      line-height: 145%;
+      color: #001d08;
+    }
+    & button {
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 160%;
+      color: #646464;
+      @include d-transition;
+      &:hover{
+        color: var(--pf-secondary-color);
       }
     }
   }
-  &-slider {
+  &-card-header {
     & a {
-      & img {
-        width: 100%;
-        height: 422px;
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 157%;
+      color: #646464;
+      @include d-transition;
+      &:hover{
+        color: var(--pf-secondary-color);
       }
     }
-    &-icon {
-      top: 30px;
-      right: 30px;
-    }
-    &-content {
-      @media #{$lg,$xs} {
-        margin-right: 18px;
-        margin-left: 18px;
-      }
-      & .rt__section-title{
-        @media #{$xs} {
-          margin-bottom: 100px;
-        }
+  }
+  &-slider-btn{
+    margin-bottom: -50px ;
+    & div {
+      width: 50px;
+      height: 50px;
+      display: grid;
+      place-items: center ;
+      @include d-transition;
+      &:hover{
+        background-color: var(--pf-secondary-color);
+        color: #fff;
       }
     }
   }
