--- a/assets/scss/layout/pages/_blog.scss
+++ b/assets/scss/layout/pages/_blog.scss
@@ -24,7 +24,7 @@
   }
   &-card-date {
     margin-top: -40px;
-    background-color: red;
+    background-color: var(--pf-secondary-color);
     display: inline-block;
     padding: 15px 20px;
     z-index: 99;
