--- a/assets/scss/theme/_common.scss
+++ b/assets/scss/theme/_common.scss
@@ -20,6 +20,9 @@
 .section-space-pb{
   padding-bottom: 120px;
 }
+.section-space-pb-50{
+  padding-bottom: 50px;
+}
 
 .section-space-margin {
   margin-top: 120px;
@@ -134,4 +137,7 @@
 }
 .bg-popup-color{
   background-color: #D4DDDE;
+}
+.bg-customer-color{
+  background-color: #FFEFEB;
 }
