--- a/assets/scss/layout/footer/_footer.scss
+++ b/assets/scss/layout/footer/_footer.scss
@@ -2,7 +2,7 @@
 
 .rt-footer {
   &-responsive-col {
-    padding-left: 30px;
+    // padding-left: 30px;
     @media #{$lg,$md,$xs} {
       padding-left: 0;
     }
@@ -78,7 +78,8 @@
       list-style-type: none;
       &:hover {
         & a {
-          color: var(--rt-secondary-color);
+          color: #FF3D00;
+          padding-left: 10px ;
         }
       }
       & a {
@@ -135,11 +136,14 @@
   }
   &-social-icon {
     & a {
-      padding: 10px;
+      padding: 8px 16px ;
+      margin: 0px 8px ;
+      box-shadow: 0px 0px 1px #996363;
 
       &:hover {
         & i {
-          color: var(--rt-secondary-color);
+          color: #FF3D00;
+          transform: scale(1.2);
         }
       }
       & i {
@@ -164,9 +168,9 @@
       overflow: hidden;
       position: relative;
       &:hover {
-       & span {
-        transform: scale(1);
-       }
+        & span {
+          transform: scale(1);
+        }
       }
       & span {
         position: absolute;
@@ -177,7 +181,7 @@
         top: 0;
         background-color: var(--rt-secondary-color);
         transform: scale(0);
-        opacity: .8;
+        opacity: 0.8;
         @include d-transition;
         & i {
           position: absolute;
@@ -185,6 +189,26 @@
           top: 50%;
           transform: translate(-50%, -50%);
         }
+      }
+    }
+  }
+}
+
+.pf__footer {
+  &-col {
+    & a {
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 156%;
+      color: #fff;
+      display: flex;
+      gap: 10px;
+      margin-bottom: 15px;
+      @include d-transition;
+      &:hover{
+        color: #FF3D00;
+        padding-left: 10px ;
       }
     }
   }
