--- a/assets/scss/layout/footer/_footer.scss
+++ b/assets/scss/layout/footer/_footer.scss
@@ -85,7 +85,7 @@
       & a {
         line-height: 2.4;
         font-size: 16px;
-        color: #fff;
+        color: #000000;
         @include d-transition;
       }
     }
@@ -147,7 +147,7 @@
         }
       }
       & i {
-        color: #fff;
+        color: #000000;
         @include d-transition;
       }
     }
@@ -201,7 +201,7 @@
       font-weight: 400;
       font-size: 16px;
       line-height: 156%;
-      color: #fff;
+      color: #000000;
       display: flex;
       gap: 10px;
       margin-bottom: 15px;
